--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,40 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+import streamlit as st
+import matplotlib.pyplot as plt
+import pandas as pd
+from collections import Counter
+import re
+
+def plot_word_frequency(text):
+    # Clean and split text into words, converting all to lowercase
+    words = re.findall(r'\w+', text.lower())
+    
+    # Count each word in the text
+    word_counts = Counter(words)
+
+    # Create DataFrame from the counter
+    df = pd.DataFrame(word_counts.items(), columns=['Word', 'Frequency']).sort_values(by='Frequency', ascending=False)
+    
+    # Plotting
+    fig, ax = plt.subplots()
+    df.head(20).plot.bar(x='Word', y='Frequency', ax=ax, color='blue')  # Only show top 20 words
+    ax.set_title("Word Frequencies")
+    ax.set_xlabel("Words")
+    ax.set_ylabel("Frequency")
+    plt.xticks(rotation=45)
+    plt.tight_layout()
+    return fig
+
+def main():
+    st.title('Word Frequency Graph')
+    user_input = st.text_area("Enter your text here:", "Type text here...")
+    if st.button('Generate Graph'):
+        fig = plot_word_frequency(user_input)
+        st.pyplot(fig)
+
+if __name__ == '__main__':
+    main()
+
