--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,11 @@ import re
 def plot_word_frequency(text):
     # Clean and split text into words, converting all to lowercase
     words = re.findall(r'\w+', text.lower())
+   words = ["apple", "banana", "orange", "grape", "kiwi"]
+filtered_words = [word for word in words if len(word) > 5]  # Example filter condition: length > 5
+print(filtered_words)
+
+
     
     # Count each word in the text
     word_counts = Counter(words)
