--- a/.gitignore
+++ b/.gitignore
@@ -461,3 +461,41 @@ page_names_to_funcs = {
 
 demo_name = st.sidebar.selectbox("Choose a demo", page_names_to_funcs.keys())
 page_names_to_funcs[demo_name]()
+
+
+
+
+
+
+
+
+
+
+
+def intro():
+    import streamlit as st
+
+    st.write("# Welcome to SuperviseMe")
+    st.sidebar.success("Select a function.")
+
+    st.markdown(
+        """
+        Supervise me is a match maker between students and supervisors for the university of St-Gallen
+
+        **👈 Select a function to start!
+        
+
+        ### Want to learn more?
+
+        - Check out [streamlit.io](https://streamlit.io)
+        - Jump into our [documentation](https://docs.streamlit.io)
+        - Ask a question in our [community
+          forums](https://discuss.streamlit.io)
+
+        ### See more complex demos
+
+        - Use a neural net to [analyze the Udacity Self-driving Car Image
+          Dataset](https://github.com/streamlit/demo-self-driving)
+        - Explore a [New York City rideshare dataset](https://github.com/streamlit/demo-uber-nyc-pickups)
+    """
+    )
